2001-05-12  Peter Targett  <peter.targett@arccores.com>

	* gas/arc/st.s: Add test case @h30 fixup.
	* gas/arc/st.d: Update to suit.

2001-05-12  Alan Modra  <amodra@one.net.au>

	* gas/i386/sse2.s: Correct cvtps2dq, movdq2q, and movq2dq
	* gas/i386/sse2.d: Likewise.  Fix pmuludq and punpckhqdq too.

	* gas/i386/ssemmx2.d: Correct movq.

2001-05-10  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/rd-dw2-10.d: Tweak for change in gas dwarf2 line number
	handling.

2001-05-04  Alan Modra  <amodra@one.net.au>

	* gas/i386/katmai.d: Correct pmovmskb and pextrw opcodes.
	* gas/i386/ssemmx2.d: Likewise.  Correct register for pextrw,
	pinsrw, and pmovmskb.
	* gas/i386/sse2.d: Correct register for movmskpd.

2001-05-02  Johan Rydberg  <jrydberg@opencores.org>

        * gas/openrisc/addi.s: New file.
        * gas/openrisc/addi.d: Likewise.
        * gas/openrisc/allinsn.exp: Likewise.
        * gas/openrisc/allinsn.s: Likewise.
        * gas/openrisc/allinsn.d: Likewise.
        * gas/openrisc/lohi.s: Likewise.
        * gas/openrisc/lohi.d: Likewise.
        * gas/openrisc/store.s: Likewise.
        * gas/openrisc/store.d: Likewise.

2001-04-05  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/rd-dw2-1.d, gas/cris/rd-dw2-2.d, gas/cris/rd-dw2-3.d,
	gas/cris/rd-dw2-4.d, gas/cris/rd-dw2-5.d, gas/cris/rd-dw2-6.d,
	gas/cris/rd-dw2-7.d, gas/cris/rd-dw2-8.d, gas/cris/rd-dw2-9.d,
	gas/cris/rd-dw2-10.d, gas/cris/rd-dw2-11.d, gas/cris/rd-dw2-12.d,
	gas/cris/rd-dw2-13.d, gas/cris/rd-dw2-14.d, gas/cris/rd-dw2-15.d:
	New tests.
	* gas/cris/brokw-2.s: Correct broken-word expansion visualization
	in comment.
	* gas/cris/fragtest.s, gas/cris/rd-pic-1.s,
	gas/cris/binop-cmpmovx.d, gas/cris/binop-cmpmove.d,
	gas/cris/binop.d, gas/cris/binop.s, gas/cris/brokw-2.d,
	gas/cris/clear.d, gas/cris/fragtest.s, gas/cris/jump-type.d,
	gas/cris/nosep.s, gas/cris/pushpop.d, gas/cris/quick.s,
	gas/cris/range-err-2.s, gas/cris/sep-err-1.s,
	gas/cris/sreg-to-x.d, gas/cris/test.d, gas/cris/x-to-byte-sreg.d,